# comgen

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: comgen.template  config.example.yaml
src/: main.rs
src/audit/: model.rs  parser.rs
src/cli/: args.rs  display.rs  error.rs  mod.rs
src/config/: error.rs  loader.rs  mod.rs  model.rs
src/git/: commands.rs  error.rs  mod.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/utils/: display.rs  error.rs  logging.rs  mod.rs
